[package]
name = "revant"
version = "0.1.0"
authors = ["Aniket Inamdar <aniket.1020@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.10.7" ,default-features = false, features = ["client", "gateway", "cache", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1.0", features = ["macros", "signal", "rt-multi-thread"] }
dotenv = "0.15.0"
tracing = "0.1.23"
tracing-subscriber = "0.2"
regex = "0.1"
phf = { version = "0.8", default-features = false, features = ["macros"] }
